gccida/g0/loop_givs_rescan
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5191:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+28h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5191:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+28h] [rbp-28h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5193:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5193:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5193:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5193:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5195:32: error: use of undeclared identifier 'v'
if ( v->same && ( *( ( _BYTE *)v->same + 100) & 4) != 0 ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5195:6: error: use of undeclared identifier 'v'
if ( v->same && ( *( ( _BYTE *)v->same + 100) & 4) != 0 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5196:14: error: use of undeclared identifier 'v'
*( ( _BYTE *)v + 100) |= 4u; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5197:21: error: use of undeclared identifier 'v'
if ( ( *( ( _BYTE *)v + 100) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5199:6: error: use of undeclared identifier 'v'
if ( v->same ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5200:1: error: use of undeclared identifier 'v'
v->new_reg = replace_rtx( v->new_reg, v->same->dest_reg, v->same->new_reg); 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5200:27: error: use of undeclared identifier 'v'
v->new_reg = replace_rtx( v->new_reg, v->same->dest_reg, v->same->new_reg); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5200:39: error: use of undeclared identifier 'v'
v->new_reg = replace_rtx( v->new_reg, v->same->dest_reg, v->same->new_reg); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5200:58: error: use of undeclared identifier 'v'
v->new_reg = replace_rtx( v->new_reg, v->same->dest_reg, v->same->new_reg); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5201:17: error: use of undeclared identifier 'v'
if ( *( _WORD *)v->new_reg == 61 && v->giv_type == DEST_REG && *( ( char *)v->dest_reg + 3) < 0 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5201:37: error: use of undeclared identifier 'v'
if ( *( _WORD *)v->new_reg == 61 && v->giv_type == DEST_REG && *( ( char *)v->dest_reg + 3) < 0 ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5201:76: error: use of undeclared identifier 'v'
if ( *( _WORD *)v->new_reg == 61 && v->giv_type == DEST_REG && *( ( char *)v->dest_reg + 3) < 0 ) 
                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/loop.c:5203:19: error: use of undeclared identifier 'v'
mark_reg_pointer( v->new_reg, cfun->emit->regno_pointer_align[v->dest_reg->fld[0].rtuint]); 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/loop_givs_rescan/src/obj/loop.o] Error 1
